services/ingress/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo
  namespace: istio-ingress
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        exact: /argo
    route:
    - destination:
        host: argocd-server.argocd
        port:
          number: 80
